scrollbar fixed

--- a/src/app/Main-colors.scss
+++ b/src/app/Main-colors.scss
@@ -145,4 +145,6 @@
     --directory-link-hover: var(--color-white-4);
 }
 
-/* ---------------------- FONTS --------------------- */
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
