--- a/src/app/components/Login/Login.scss
+++ b/src/app/components/Login/Login.scss
@@ -210,14 +210,6 @@
     font-size: 16px;
 }
 
-.options_area::-webkit-scrollbar {
-    -webkit-appearance: none;
-}
-
-.options_area::-webkit-scrollbar:vertical {
-    width: 1px;
-}
-
 @keyframes options_motion {
     from {
         transform: translateY(-5px);
